[project]
name = "OpenAI-Python-Client"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ian Goforth", email = "ian.goforth@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "attrs>=23.2.0",
    "python-dateutil>=2.9.0.post0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "openapi-python-client>=0.19.1",
]
